update style.css for readability, add header tags, fix broken images

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,51 @@
 body {
-  background-color: #ff0000;
-  color: #0000FF;
+  background-color: #F5F5F5;
+  color: #484848;
+  font-size: 16px;
+  line-height: 1.45;
+}
+
+h1 {
+  font-size: 3em; /* 48px */
+  line-height: 1.2;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+}
+
+h2 {
+  font-size: 2.4em; /* 38.4px */
+  line-height: 1.3;
+  padding-bottom: 0.5em;
+}
+
+h3 {
+  font-size: 1.7em; /* 31.2px */
+  line-height: 1.3;
+  padding-bottom: 1em;
+}
+
+h4 {
+  font-size: 1.5em; /* 24px */
+  line-height: 1.35;
+  padding-bottom: 1em;
+}
+
+h5 {
+  font-size: 1.25em; /* 20px */
+  line-height: 1.35;
+  padding-bottom: 1em;
+}
+
+h6 {
+  font-size: 1.15em; /* 18.4px */
+  line-height: 1.45;
+  padding-bottom: 1em;
+}
+
+p {
+  font-size: 1em; /* 16px */
+  line-height: 1.6;
+  padding-bottom: 1.2em;
 }
 
 nav {
@@ -8,6 +53,26 @@ nav {
   float: left;
   position: fixed;
   width: 100%;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:link {
+  color: #ffffff;  /* unvisited */
+}
+
+a:visited {
+  color: #99e699;  /* visited */
+}
+
+a:hover {
+  color: #ffcc00; /* mouse over */
+}
+
+a:active {
+  color: #b3ecff; /* selected */
 }
 
 .logo {
